--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="registrationForm">
+      <input type="email" id="email" />
+      <input type="password" id="password" />
+      <input type="password" id="passwordConfirmation" />
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
