--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,10 +9,20 @@
   <body>
     <div id="app"></div>
     <div id="registrationForm">
-      <input type="email" id="email" />
-      <input type="password" id="password" />
-      <input type="password" id="passwordConfirmation" />
+      <input type="email" id="email" placeholder="Email" autofocus />
+      <input type="password" id="password" placeholder="Password" />
+      <input
+        type="password"
+        id="passwordConfirmation"
+        placeholder="Confirm Password"
+      />
+      <button id="register">Register</button>
     </div>
+    <div id="successDiv" style="display: none">
+      Registration Successfull
+      <button id="backToHomepage">Back To Homepage</button>
+    </div>
+    <div id="errorDiv" style="display: none"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
