--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,9 +19,11 @@
       <button id="register">Register</button>
     </div>
     <div id="successDiv" style="display: none">
-      Registration Successfull
-      <button id="backToHomepage">Back To Homepage</button>
+      Registration Successfull <br /><button id="backToHomePageButton">
+        Back To Homepage
+      </button>
     </div>
+
     <div id="errorDiv" style="display: none"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
